<resources>
    /* Globals Strings */
    <string name="app_name">Data Management</string>
    <string name="app_desc">Description Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="information_vide">- - - -</string>

    /* Key Strings */
    <string name="key_position">position</string>

    /* Menu Strings */
    <string name="menu_perf_machine_title">Performance Machine</string>
    <string name="menu_perf_article_title">Performance Article</string>
    <string name="menu_favorite_machine_title">Favoris Machine</string>
    <string name="menu_favorite_article_title">Favoris Article</string>

    /* Strings for PeriodActivity */
    <string name="period_text_start">Période du :</string>
    <string name="period_text_end">Au :</string>
    <string name="period_text_title">Période sélectionnée pour les calculs</string>

    /* Strings for ArticleFrangment */
    <string name="menu_article_title">Article</string>

    /* Strings for MachineFragment */
    <string name="menu_machine_title">Machine</string>

    /* Strings for SiteFragment */
    <string name="recycler_site_nb_machine">#</string>

    <string name="main_recycler_item_volume">Volume</string>
    <string name="main_recycler_item_waste">Rebuts déclarés</string>
    <string name="main_recycler_item_theoretical_pace">Cadence théorique</string>
    <string name="section_pager_production">Production</string>
    <string name="section_pager_productivity">Productivité</string>
    <string name="section_pager_operator_performance">Performance Opérateur</string>
    <string name="section_pager_planning">Planning</string>
    <string name="article_detail_activity_loading_fail">L\'article n\'a pas pu être chargé.</string>
    <string name="period_toast_unvailable_date">La date saisie n\'est pas valide</string>
    <string name="action_settings">Options</string>
    <string name="action_period">Période</string>

    /* Strings for ArticleDetailActivity */

    /* Strings for MachineDetailActivity */

    /* Strings for SiteDetailActivity */

    /* Strings for ArticleOperatorPerfFragment */

    /* Strings for ArticlePlanningFragment */

    /* Strings for ArticleProductionFragment */
    <string name="article_production_site">Site</string>
    <string name="article_production_machine">Machine</string>
    <string name="article_production_num_article">Numéro d\'article</string>
    <string name="article_production_declaration_date">Déclaration de production</string>
    <string name="article_production_starting_date">Début planifié</string>
    <string name="article_production_ending_date">Fin planifiée</string>
    <string name="article_production_global_title">Global</string>
    <string name="article_production_date_title">Date</string>
    <string name="article_production_data_title">Données</string>
    <string name="article_production_data_volume">Volume</string>
    <string name="article_production_data_waste_percent">Rebut (%)</string>
    <string name="article_production_data_waste_qt">Rebut (Qt)</string>
    <string name="key_num">num</string>
    <string name="article_of_item_asked_qt">Quantité prévue</string>

    /* Strings for MachineDétailActivity */
    <string name="machine_pager_mcu">MCU</string>
    <string name="machine_pager_ome">OME</string>

    /* Dropbox */
    <!-- Change this to your app key -->
    <string name="app_key">epzhp1cvwybijfw</string>

    /* Room Machine Database */
    <string name="pourcentage_perf_database_name">MachineDatabase</string>
    <string name="machine_add_one_success">Impossible d\'ajouter la machine</string>
    <string name="machine_add_one_error">La machine a été ajoutée</string>
    <string name="machine_add_all_success">Les machines ont été ajoutées</string>
    <string name="machine_add_all_error">Impossible d\'ajouter les machines</string>
    <string name="machine_del_one_success">La machine a été supprimée</string>
    <string name="machine_del_one_error">Impossible de supprimer la machine</string>
    <string name="machine_add_one_fav_success">La machine a été ajoutée aux favoris</string>
    <string name="machine_add_one_fav_error">Impossible d\'ajouter la machine aux favoris</string>
    <string name="machine_del_one_fav_success">La machine a été retirée des favoris</string>
    <string name="machine_del_one_fav_error">Impossible de retirer la machine des favoris</string>
    <string name="machine_get_fav_error">Impossible de récupérer les favoris</string>

    /* Room Article Database */
    <string name="quantity_database_name">quantity_database</string>
    <string name="splash_lib_step_1">Téléchargement…</string>
    <string name="splash_lib_step_2">Lecture…</string>
    <string name="splash_lib_step_3">Enregistrement…</string>
    <string name="key_id_article">idArticle</string>
    <string name="article_customer">Client</string>
    <string name="article_type">Type</string>
    <string name="article_quantity">Quantité produite</string>
    <string name="article_total_quantity">Quantité total produite</string>
    <string name="menu_perf_percent_title">Pourcentage Performance</string>
    <string name="menu_perf_presse_title">Performance Presse</string>
    <string name="menu_favorite_presse_title">Favoris Presse</string>
    <string name="data_not_found_in_period">Aucune données trouvées sur la période</string>


</resources>
