<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.florian.projet.view.activity.PeriodActivity">

    <TextView
        android:id="@+id/period_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period_text_title"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/aptar_bh_light_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@+id/period_edit_start_date"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/period_text_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period_text_start"
        app:layout_constraintTop_toTopOf="@+id/period_edit_start_date"
        app:layout_constraintBottom_toBottomOf="@+id/period_edit_start_date"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@+id/period_edit_start_date"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/period_edit_start_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/period_text_title" />

    <TextView
        android:id="@+id/period_text_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period_text_end"
        app:layout_constraintTop_toTopOf="@+id/period_edit_end_date"
        app:layout_constraintBottom_toBottomOf="@+id/period_edit_end_date"
        app:layout_constraintEnd_toEndOf="@id/period_text_start_date"
        android:labelFor="@+id/period_edit_end_date"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/period_edit_end_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/period_edit_start_date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_text_asterisk"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
