<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/main_recycle_item_title"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/main_recycle_item_volume_lib"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/main_recycler_item_volume"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/main_recycle_item_title" />

        <TextView
            android:id="@+id/main_recycle_item_volume_res"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@id/main_recycle_item_volume_lib" />

        <TextView
            android:id="@+id/main_recycle_item_waste_lib"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_recycler_item_waste"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/main_recycle_item_volume_lib" />

        <TextView
            android:id="@+id/main_recycle_item_waste_res"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@id/main_recycle_item_waste_lib" />

        <TextView
            android:id="@+id/main_recycle_item_theoretical_pace_lib"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_recycler_item_theoretical_pace"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/main_recycle_item_waste_lib" />

        <TextView
            android:id="@+id/main_recycle_item_theoretical_pace_res"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@id/main_recycle_item_theoretical_pace_lib" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>